chore(docs): update document
